deploy/kubernetes/sf-pilot2-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-pilot2-redis
spec:
  selector:
    app: pilot2-redis
  ports:
    - name: websocket
      protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sf-pilot2-redis
spec:
  replicas: 3
  serviceName: redis
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: pilot2-redis
  template:
    metadata:
      labels:
        app: pilot2-redis
    spec:
      containers:
      - name: container-pilot2-redis
        image: redis
        ports:
        - containerPort: 6379
